--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "bls-polymers",
+  "name": "blspolymers",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/bls-polymers",
+  "homepage": ".",
   "dependencies": {
     "@coreui/chartjs": "^4.0.0",
     "@coreui/icons": "^3.0.1",
