--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@coreui/react": "^5.5.0",
     "@coreui/react-chartjs": "^3.0.0",
     "@reduxjs/toolkit": "^2.7.0",
+    "aos": "^2.3.4",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
@@ -17,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.9",
     "cors": "^2.8.5",
+    "countup.js": "^2.9.0",
     "express": "^4.21.2",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
