--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "chart.js": "^4.4.9",
     "cors": "^2.8.5",
     "countup.js": "^2.9.0",
+    "dotenv": "^10.0.0",
     "express": "^4.21.2",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "multer": "*",
+    "nodemailer": "^7.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
